bar de recherche 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <script src="main.js"></script>
     </head>
 <body>
-    
+    <ul id="navibar">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="page2.html">page2</a></li>
+        <li><a href="page3.html">page3</a></li>
+        <li><a href="page4.html">page4</a></li>
+      </ul>
 </body>
 </html>
