--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							<div class="fh5co-right-position">
 						-->
 						<div class="fh5co-left-position">
-							<h2 class="animate-box">Ananin ami trump</h2>
+							<h2 class="animate-box">Doritos</h2>
 							<p class="animate-box"><a href="https://vimeo.com/channels/staffpicks/93951774" class="btn btn-outline popup-vimeo btn-video"><i class="icon-play2"></i> Watch video</a> <a href="http://freehtml5.co" target="_blank" class="btn btn-primary">Visit FREEHTML5.co</a></p>
 						</div>
 					</div>
