--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="fh5co-left"><small>&copy; 2016 <a href="index.html">Guide</a> free html5. All Rights Reserved.</small></p>
+							<p class="fh5co-left"><small>&copy; 2016 <a href="index.html">Jeux Vidéos</a> free html5. All Rights Reserved.</small></p>
 							<p class="fh5co-right"><small class="fh5co-right">Designed by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
 						</div>
 					</div>
