--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 			</div>
 			<div class="fh5co-learn-more animate-box">
 				<a href="#" class="scroll-btn">
-					<span class="text">Explore more about us</span>
+					<span class="text">Découvrir plus</span>
 					<span class="arrow"><i class="icon-chevron-down"></i></span>
 				</a>
 			</div>
