--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							<div class="fh5co-right-position">
 						-->
 						<div class="fh5co-left-position">
-							<h2 class="animate-box">Les meilleures actualités !</h2>
+							<h2 class="animate-box">Les meilleures !</h2>
 
 							
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/9ewiJJe_nYI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
