--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 			<div class="container">
 				<nav role="navigation">
 					<ul class="pull-left left-menu">
-						<li><a href="about.html">About</a></li>
-						<li><a href="tour.html">Tour</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">A propos</a></li>
+						<li><a href="tour.html">NFS</a></li>
+						<li><a href="pricing.html">For Honor</a></li>
 					</ul>
 					<h1 id="fh5co-logo"><a href="index.html">JEUX VIDEO <span></span></a></h1>
 					<ul class="pull-right right-menu">
