--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
 			<div class="container">
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-lead animate-box">Our Products</h2>
-						<p class="fh5co-sub-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+						<h2 class="fh5co-lead animate-box">Dernières actualités</h2>
+						<p class="fh5co-sub-lead animate-box"> Découvrez ci-dessous les toutes dernières actualités concernant NeedForSpeed Heat ainsi que For Honor ! </p>
 					</div>
 				</div>
 				<div class="row">
