--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 						<a href="images/img_1.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_1.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>Beautiful Sunrise</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<h2>Voiture de sport</h2>
+								<p>Nouvelle Lamborghini Huracan</p>
 							</div>
 						</a>
 					</div>
@@ -321,8 +321,8 @@
 						<a href="images/img_2.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_2.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>Cute Little Dog</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<h2>Voiture Muscle Car</h2>
+								<p>Nouvelle Dodge Charger</p>
 							</div>
 						</a>
 					</div>
