--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 							<img src="images/img_1.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
 								<h2>Voiture de sport</h2>
-								<p>Nouvelle Porshe Cayman</p>
+								<p>Nouvelle Lamborghini Huracan</p>
 							</div>
 						</a>
 					</div>
@@ -332,7 +332,7 @@
 							<img src="images/img_3.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
 								<h2>SUV</h2>
-								<p>Nouvelle Land Rover Range Rover</p>
+								<p>Nouvelle Land Rover Range O</p>
 							</div>
 						</a>
 					</div>
