--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 			<div class="container">
 				<div class="row text-center row-bottom-padded-md">
 					<div class="col-md-8 col-md-offset-2">
-						<figure class="fh5co-devices animate-box"><img src="images/img_devices.png" alt="Free HTML5 Bootstrap Template" class="img-responsive"></figure>
+						<figure class="fh5co-devices animate-box"><img src="images/ps5.png" alt="Free HTML5 Bootstrap Template" class="img-responsive"></figure>
 						<h2 class="fh5co-lead animate-box">Perfect Display in All Devices</h2>
 						<p class="fh5co-sub-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows.</p>
 					</div>
