--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
 						<a href="images/img_4.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_4.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>Puppy & I in the Farm</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<h2>Sun Da</h2>
+								<p>Nouvelle saison de For Honor</p>
 							</div>
 						</a>
 					</div>
@@ -351,8 +351,8 @@
 						<a href="images/img_5.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_5.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>A Big Wave of the Blue Sea</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<h2>Nouvelle mode de jeu: BRÈCHE</h2>
+								<p>Une nouveau mode de jeu qui augment le tension, plus amusant, plus serieux</p>
 							</div>
 						</a>
 					</div>
@@ -361,8 +361,8 @@
 						<a href="images/img_6.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_6.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>Foggy Pine Trees</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
+								<h2>Tiandi</h2>
+								<p>Un nouveu gardien chinois, maitre d'attaque en esquive</p>
 							</div>
 						</a>
 					</div>
