--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
 						<a href="images/img_5.jpg" class="fh5co-project-item image-popup">
 							<img src="images/img_5.jpg" alt="Image" class="img-responsive">
 							<div class="fh5co-text">
-								<h2>Nouvelle mode de jeu: BRÈCHE</h2>
-								<p>Une nouveau mode de jeu qui augment le tension, plus amusant, plus serieux</p>
+								<h2>Nouveau mode de jeu: BRÈCHE</h2>
+								<p>Un nouveau mode de jeu qui augmente la tension, plus amusant, plus sérieux</p>
 							</div>
 						</a>
 					</div>
