--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
 				<div class="row text-center row-bottom-padded-md">
 					<div class="col-md-8 col-md-offset-2">
 						<figure class="fh5co-devices animate-box"><img src="images/accro.png" alt="Free HTML5 Bootstrap Template" class="img-responsive"></figure>
-						<h2 class="fh5co-lead animate-box">Perfect Display in All Devices</h2>
-						<p class="fh5co-sub-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows.</p>
+						<h2 class="fh5co-lead animate-box">Mangez des durums et jouez aux jeux !</h2>
+						<p class="fh5co-sub-lead animate-box">Nous vous présentons ci-dessous plusieurs jeux, de plusieurs catégories qui pourraient vous intéresser, ainsi, vous permettre de dépenser plus d'argent !</p>
 					</div>
 				</div>
 				<div class="row">
