--- a/tour.html
+++ b/tour.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Guide &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Accueil &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -246,21 +246,20 @@
 			<div class="container">
 				<nav role="navigation">
 					<ul class="pull-left left-menu">
-						<li><a href="about.html">About</a></li>
-						<li class="active"><a href="tour.html">Tour</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">A propos</a></li>
+						<li class="active"><a href="tour.html">NFS</a></li>
+						<li><a href="pricing.html">For Honor</a></li>
 					</ul>
-					<h1 id="fh5co-logo"><a href="index.html">guide<span>.</span></a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Accueil<span>.</span></a></h1>
 					<ul class="pull-right right-menu">
-						<li><a href="#">Login</a></li>
-						<li class="fh5co-cta-btn"><a href="#">Sign up</a></li>
+						
 					</ul>
 				</nav>
 			</div>
 		</section>
 		<!-- #fh5co-header -->
 
-		<section id="fh5co-hero" class="no-js-fullheight" style="background-image: url(images/full_image_2.jpg);" data-next="yes">
+		<section id="fh5co-hero" class="no-js-fullheight" style="background-image: url(images/nnn.jpg);" data-next="yes">
 			<div class="fh5co-overlay"></div>
 			<div class="container">
 				<div class="fh5co-intro no-js-fullheight">
@@ -272,8 +271,8 @@
 							<div class="fh5co-right-position">
 						-->
 						<div class="fh5co-center-position">
-							<h2 class="animate-box">Tour Our Products</h2>
-							<h3 class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there.</h3>
+							<h2 class="animate-box">Need For Speed Heat</h2>
+							<h3 class="animate-box">Production By EA or by Kadjir</h3>
 						</div>
 					</div>
 				</div>
@@ -291,331 +290,13 @@
 			<div class="container">
 				<div class="row text-center row-bottom-padded-md">
 					<div class="col-md-8 col-md-offset-2">
-						<figure class="fh5co-devices animate-box"><img src="images/img_devices.png" alt="Free HTML5 Bootstrap Template" class="img-responsive"></figure>
-						<h2 class="fh5co-lead animate-box">Perfect Display in All Devices</h2>
-						<p class="fh5co-sub-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows.</p>
+						<figure class="fh5co-devices animate-box"><img src="images/prst.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></figure>
+						<h2 class="fh5co-lead animate-box">Echappez aux flics !</h2>
+						<p class="fh5co-sub-lead animate-box"></p> Comme à chaque fois, ce NFS nous régale en nous proposant en plus des courses la journée (légales), des courses les nuits (illégales) où les policiers ne rigolent pas !
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-power"></i>
-							</div>
-							<h3 class="animate-box">Best For Startup</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-flag2"></i>
-							</div>
-							<h3 class="animate-box">Easy To Use</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-anchor"></i>
-							</div>
-							<h3 class="animate-box">Robust In Mind</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-paragraph"></i>
-							</div>
-							<h3 class="animate-box">Beautiful Typography</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-umbrella"></i>
-							</div>
-							<h3 class="animate-box">Eco Friendly</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12">
-						<div class="fh5co-feature">
-							<div class="fh5co-icon animate-box">
-								<i class="icon-toggle"></i>
-							</div>
-							<h3 class="animate-box">Wide and Boxed</h3>
-							<p class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right .</p>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-				</div>
-			</div>
-		</section>	
-
-		<!-- END #fh5co-features -->
-
-
-		<section id="fh5co-features-2">
-			<div class="container">
-				<div class="col-md-6 col-md-push-6">
-					<figure class="fh5co-feature-image animate-box">
-						<img src="images/macbook.png" alt="Free HTML5 Bootstrap Template by FREEHTML5.co">
-					</figure>
-				</div>
-				<div class="col-md-6 col-md-pull-6">
-					<span class="fh5co-label animate-box">See Features</span>
-					<h2 class="fh5co-lead animate-box">Superb Features</h2>
-					<div class="fh5co-feature">
-						<div class="fh5co-icon animate-box"><i class="icon-check2"></i></div>
-						<div class="fh5co-text animate-box">
-							<h3>Beautiful Typography</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature">
-						<div class="fh5co-icon animate-box"><i class="icon-check2"></i></div>
-						<div class="fh5co-text animate-box">
-							<h3>Eco Friendly</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature">
-						<div class="fh5co-icon animate-box"><i class="icon-check2"></i></div>
-						<div class="fh5co-text animate-box">
-							<h3>Wide and Boxed</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-
-					<div class="fh5co-btn-action animate-box">
-						<a href="#" class="btn btn-primary btn-cta">More Features</a>
-					</div>
-
-				</div>
-			</div>
-		</section>
-		<!-- END #fh5co-features-2 -->
-
-
-		<section id="fh5co-features-3">
-			<div class="container">
-				<div class="col-md-6 col-md-pull-8">
-					<figure class="fh5co-feature-image animate-box">
-						<img src="images/macbook.png" alt="Free HTML5 Bootstrap Template by FREEHTML5.co">
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<span class="fh5co-label animate-box">More Features</span>
-					<h2 class="fh5co-lead animate-box">Let's take your business to the next level</h2>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-paragraph"></i></div>
-						<div class="fh5co-text">
-							<h3>Beautiful Typography</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-umbrella"></i></div>
-						<div class="fh5co-text">
-							<h3>Eco Friendly</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-toggle"></i></div>
-						<div class="fh5co-text">
-							<h3>Wide and Boxed</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-
-					<div class="fh5co-btn-action animate-box">
-						<a href="#" class="btn btn-primary btn-cta">More Features</a>
-					</div>
-
-				</div>
-			</div>
-		</section>
-		<!-- END #fh5co-features-3 -->
-
-
-		<section id="fh5co-features-4">
-			<div class="container">
-				<div class="col-md-6 col-md-push-6">
-					<figure class="fh5co-feature-image animate-box">
-						<img src="images/macbook.png" alt="Free HTML5 Bootstrap Template by FREEHTML5.co">
-					</figure>
-				</div>
-				<div class="col-md-6 col-md-pull-6">
-					<span class="fh5co-label animate-box">See Features</span>
-					<h2 class="fh5co-lead animate-box">Superb Features</h2>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-check2"></i></div>
-						<div class="fh5co-text">
-							<h3>Beautiful Typography</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-check2"></i></div>
-						<div class="fh5co-text">
-							<h3>Eco Friendly</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-					<div class="fh5co-feature animate-box">
-						<div class="fh5co-icon"><i class="icon-check2"></i></div>
-						<div class="fh5co-text">
-							<h3>Wide and Boxed</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						</div>
-					</div>
-
-					<div class="fh5co-btn-action animate-box">
-						<a href="#" class="btn btn-primary btn-cta">More Features</a>
-					</div>
-
-				</div>
-			</div>
-		</section>
-		<!-- END #fh5co-features-4 -->
-		
-		<section id="fh5co-testimonials">
-			<div class="container">
-				<div class="row row-bottom-padded-sm">
-					<div class="col-md-6 col-md-offset-3 text-center">
-						<div class="fh5co-label animate-box">Testimonials</div>
-						<h2 class="fh5co-lead animate-box">Join the 1 Million Users using Our Products </h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center animate-box">
-						<div class="flexslider">
-					  		<ul class="slides">
-							   <li>
-							      <blockquote>
-							      	<p>&ldquo;Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn’t really do it, they just saw something. It seemed obvious to them after a while.&rdquo;</p>
-							      	<p><cite>&mdash; Steve Jobs</cite></p>
-							      </blockquote>
-							   </li>
-							   <li>
-							    	<blockquote>
-							      	<p>&ldquo;I think design would be better if designers were much more skeptical about its applications. If you believe in the potency of your craft, where you choose to dole it out is not something to take lightly.&rdquo;</p>
-							      	<p><cite>&mdash; Frank Chimero</cite></p>
-							      </blockquote>
-							   </li>
-							   <li>
-							    	<blockquote>
-							      	<p>&ldquo;Design must be functional and functionality must be translated into visual aesthetics, without any reliance on gimmicks that have to be explained.&rdquo;</p>
-							      	<p><cite>&mdash; Ferdinand A. Porsche</cite></p>
-							      </blockquote>
-							   </li>
-							</ul>
-						</div>
-						<div class="flexslider-controls">
-						   <ol class="flex-control-nav">
-						      <li class="animate-box"><img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co"></li>
-						      <li class="animate-box"><img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co"></li>
-						      <li class="animate-box"><img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co"></li>
-						   </ol>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END #fh5co-testimonials -->
-
-		<section id="fh5co-subscribe">
-			<div class="container">
-		
-				<h3 class="animate-box"><label for="email">Subscribe to our newsletter</label></h3>
-				<form action="#" method="post" class="animate-box">
-					<i class="fh5co-icon icon-paper-plane"></i>
-					<input type="email" class="form-control" placeholder="Enter your email" id="email" name="email">
-					<input type="submit" value="Send" class="btn btn-primary">
-				</form>
-
-			</div>
-		</section>
-		<!-- END #fh5co-subscribe -->
-
-		<footer id="fh5co-footer">
-			<div class="container">
-				<div class="row row-bottom-padded-md">
-					<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
-						<div class="fh5co-footer-widget">
-							<h3>Company</h3>
-							<ul class="fh5co-links">
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Feature Tour</a></li>
-								<li><a href="#">Pricing</a></li>
-								<li><a href="#">Team</a></li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
-						<div class="fh5co-footer-widget">
-							<h3>Support</h3>
-							<ul class="fh5co-links">
-								<li><a href="#">Knowledge Base</a></li>
-								<li><a href="#">24/7 Call Support</a></li>
-								<li><a href="#">Video Demos</a></li>
-								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
-						<div class="fh5co-footer-widget">
-							<h3>Contact Us</h3>
-							<p>
-								<a href="mailto:info@freehtml5.co">info@freehtml5.co</a> <br>
-								198 West 21th Street, <br>
-								Suite 721 New York NY 10016 <br>
-								<a href="tel:+123456789">+12 34  5677 89</a>
-							</p>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 col-xs-12 animate-box">
-						<div class="fh5co-footer-widget">
-							<h3>Follow Us</h3>
-							<ul class="fh5co-social">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-google-plus"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
-								<li><a href="#"><i class="icon-youtube-play"></i></a></li>
-							</ul>
-						</div>
-					</div>
-
 				</div>
 				
-			</div>
-			<div class="fh5co-copyright animate-box">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<p class="fh5co-left"><small>&copy; 2016 <a href="index.html">Guide</a> free html5. All Rights Reserved.</small></p>
-							<p class="fh5co-right"><small class="fh5co-right">Designed by <a href="http://freehtml5.co" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<!-- END #fh5co-footer -->
-	</div>
+		
 	<!-- END #fh5co-page -->
 	
 	<!-- For demo purposes Only ( You may delete this anytime :-) -->
