--- a/pricing.html
+++ b/pricing.html
@@ -246,15 +246,11 @@
 			<div class="container">
 				<nav role="navigation">
 					<ul class="pull-left left-menu">
-						<li><a href="about.html">About</a></li>
-						<li><a href="tour.html">Tour</a></li>
-						<li class="active"><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">A propos</a></li>
+						<li><a href="tour.html">NFS</a></li>
+						<li class="active"><a href="pricing.html">For Honor</a></li>
 					</ul>
-					<h1 id="fh5co-logo"><a href="index.html">guide<span>.</span></a></h1>
-					<ul class="pull-right right-menu">
-						<li><a href="#">Login</a></li>
-						<li class="fh5co-cta-btn"><a href="#">Sign up</a></li>
-					</ul>
+					<h1 id="fh5co-logo"><a href="index.html">ARTech-TR</a></h1>
 				</nav>
 			</div>
 		</section>
@@ -272,8 +268,8 @@
 							<div class="fh5co-right-position">
 						-->
 						<div class="fh5co-center-position">
-							<h2 class="animate-box">Plans for Everyone</h2>
-							<h3 class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there.</h3>
+							<h2 class="animate-box">For Honor</h2>
+							<h3 class="animate-box">Après un grand cataclysme, 4 des factions guerrières les plus féroces de l'histoire s'affrontent dans une bataille épique pour la survie.</h3>
 							
 						</div>
 					</div>
