--- a/pricing.html
+++ b/pricing.html
@@ -284,84 +284,13 @@
 		</section>
 		<!-- END #fh5co-hero -->
 
-		<section id="fh5co-pricing">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3 col-sm-6 animate-box">
-					<div class="price-box">
-						<h2 class="pricing-plan">Starter</h2>
-						<div class="price"><sup class="currency">$</sup>7<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>10 projects</li>
-							<li>20 Pages</li>
-							<li>20 Emails</li>
-							<li>100 Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 animate-box">
-					<div class="price-box">
-						<h2 class="pricing-plan">Regular</h2>
-						<div class="price"><sup class="currency">$</sup>19<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>15 projects</li>
-							<li>40 Pages</li>
-							<li>40 Emails</li>
-							<li>200 Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="clearfix visible-sm-block"></div>
-				<div class="col-md-3 col-sm-6 animate-box">
-					<div class="price-box popular">
-						<div class="popular-text">Best value</div>
-						<h2 class="pricing-plan">Plus</h2>
-						<div class="price"><sup class="currency">$</sup>79<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>Unlimitted projects</li>
-							<li>100 Pages</li>
-							<li>100 Emails</li>
-							<li>700 Images</li>
-						</ul>
-						<a href="#" class="btn btn-primary btn-sm">Get started</a>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 animate-box">
-					<div class="price-box">
-						<h2 class="pricing-plan">Enterprise</h2>
-						<div class="price"><sup class="currency">$</sup>125<small>/mo</small></div>
-						<p>Basic customer support for small business</p>
-						<hr>
-						<ul class="pricing-info">
-							<li>Unlimitted projects</li>
-							<li>Unlimitted Pages</li>
-							<li>Unlimitted Emails</li>
-							<li>Unlimitted Images</li>
-						</ul>
-						<a href="#" class="btn btn-default btn-sm">Get started</a>
-					</div>
-				</div>
-				
-				</div>
-			</div>
-		</section>
-
+		
 		<!-- END #fh5co-pricing -->
 
 		<div id="fh5co-faqs">
 			<div class="container">
 				<div class="row row-bottom-padded-lg">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<div class="fh5co-label animate-box">FAQ</div>
-						<h2 class="fh5co-lead animate-box">Frequently Ask Questions</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -369,27 +298,7 @@
 						<ul class="fh5co-faq-list">
 							<li class="animate-box">
 								<h2>What is Guide?</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</li>
-							<li class="animate-box">
-								<h2>What language are available?</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</li>
-							<li class="animate-box">
-								<h2>I have technical problem, who do I email?</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</li>
-							<li class="animate-box">
-								<h2>Can I have a username that is already taken?</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</li>
-							<li class="animate-box">
-								<h2>How do I use Guide features?</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</li>
-							<li class="animate-box">
-								<h2>Is Guide free??</h2>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<p>Depuis son lancement en février 2017, le jeu n'a cessé de connaître des mises à jour et améliorations. L'ajout de serveurs dédiés a permis aux joueurs de profiter d'une expérience stable et sans encombres et les nouveaux modes d'entraînement leur a donné la possibilité de passer du rang d'apprenti à celui de maître tout en obtenant des récompenses. Mettez vos nouvelles compétences à l'épreuve grâce à des tout nouveaux modes et personnalisez vos héros avec des milliers d'équipements ajoutés depuis la sortie du jeu.</p>
 							</li>
 						</ul>
 					</div>
