--- a/about.html
+++ b/about.html
@@ -247,14 +247,13 @@
 			<div class="container">
 				<nav role="navigation">
 					<ul class="pull-left left-menu">
-						<li class="active"><a href="about.html">About</a></li>
-						<li><a href="tour.html">Tour</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li class="active"><a href="about.html">A propos</a></li>
+						<li><a href="tour.html">NFS</a></li>
+						<li><a href="pricing.html">For Honor</a></li>
 					</ul>
-					<h1 id="fh5co-logo"><a href="index.html">guide<span>.</span></a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Accueil<span>.</span></a></h1>
 					<ul class="pull-right right-menu">
-						<li><a href="#">Login</a></li>
-						<li class="fh5co-cta-btn"><a href="#">Sign up</a></li>
+						
 					</ul>
 				</nav>
 			</div>
@@ -273,8 +272,8 @@
 							<div class="fh5co-right-position">
 						-->
 						<div class="fh5co-center-position">
-							<h2 class="animate-box">Who We Are</h2>
-							<h3 class="animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there.</h3>
+							<h2 class="animate-box">Qui sommes nous ? </h2>
+							<h3 class="animate-box">Si vous voulez en savoir plus sur nous, arrêter d'être curieux et consultez cette page</h3>
 							
 						</div>
 					</div>
@@ -295,13 +294,13 @@
 				<div class="row row-bottom-padded-lg">
 					<div class="col-md-6">
 						<figure class="animate-box">
-							<img src="images/img_3.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co" class="img-responsive">
+							<img src="images/manette.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co" class="img-responsive">
 						</figure>
 					</div>
 					<div class="col-md-6">
-						<div class="fh5co-label animate-box">Who We Are</div>
-						<h2 class="fh5co-lead animate-box">We Are Thinkers, Innovators, Scientist, etc.</h2>
-						<p class="fh5co-sub-lead animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+						<div class="fh5co-label animate-box">Nous sommes Kadir et Miraç</div>
+						<h2 class="fh5co-lead animate-box">Bienvenu sur notre page</h2>
+						<p class="fh5co-sub-lead animate-box"></p>
 					</div>
 				</div>
 
