--- a/about.html
+++ b/about.html
@@ -297,7 +297,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-label animate-box">Nous sommes Kadir et Miraç</div>
 						<h2 class="fh5co-lead animate-box">Bienvenu sur notre page</h2>
-						<p class="fh5co-sub-lead animate-box"></p>
+						<p class="fh5co-sub-lead animate-box">Je suis Kadir Cobanoglu et en compagnie de mon collègue Mirac Nurullah Tok, nous avons créer ce site pour but d'avoir des points dans le cour du célèbre Monsieur Simon. Amusez-vous et apprenez beaucoup !</p>
 					</div>
 				</div>
 
