--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
 						<li><a href="tour.html">NFS</a></li>
 						<li><a href="pricing.html">For Honor</a></li>
 					</ul>
-					<h1 id="fh5co-logo"><a href="index.html">Accueil<span>.</span></a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">ARTech-TR<span> </span></a></h1>
 				</nav>
 			</div>
 		</section>
