--- a/tour.html
+++ b/tour.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Accueil &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>ARTech-TR  &mdash; 100% Quality</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -250,7 +250,7 @@
 						<li class="active"><a href="tour.html">NFS</a></li>
 						<li><a href="pricing.html">For Honor</a></li>
 					</ul>
-					<h1 id="fh5co-logo"><a href="index.html">Accueil<span>.</span></a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">ARTech-TR <span></span></a></h1>
 					<ul class="pull-right right-menu">
 						
 					</ul>
