--- a/about.html
+++ b/about.html
@@ -305,11 +305,11 @@
 					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="fh5co-person">	
 							<figure class="animate-box">
-								<img src="images/person5.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co" class="img-responsive">
+								<img src="images/kadir.jpg" alt="Free HTML5 Bootstrap Template by FREEHTML5.co" class="img-responsive">
 							</figure>
-							<h3 class="fh5co-name animate-box">Jeff Wardrobe</h3>
-							<h4 class="fh5co-designation animate-box">Founder, Web Developer</h4>
-							<p class="fh5co-bio animate-box">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+							<h3 class="fh5co-name animate-box">Kadir Cobanoglu</h3>
+							<h4 class="fh5co-designation animate-box">Le turc aux poings d'acier</h4>
+							<p class="fh5co-bio animate-box"></p>
 							<ul class="fh5co-social">
 								<li class="animate-box"><a href="#"><i class="icon-twitter"></i></a></li>
 								<li class="animate-box"><a href="#"><i class="icon-dribbble"></i></a></li>
