--- a/tour.html
+++ b/tour.html
@@ -279,7 +279,7 @@
 			</div>
 			<div class="fh5co-learn-more animate-box">
 				<a href="#" class="scroll-btn">
-					<span class="text">See our products</span>
+					<span class="text">Descend en bas vite !</span>
 					<span class="arrow"><i class="icon-chevron-down"></i></span>
 				</a>
 			</div>
@@ -299,6 +299,7 @@
 		
 	<!-- END #fh5co-page -->
 	
+	<!-- For demo purposes Only ( You may delete this anytime :-) -->
 	<!-- For demo purposes Only ( You may delete this anytime :-) -->
 	<div id="colour-variations">
 		<a class="option-toggle"><i class="icon-gear"></i></a>
